Http client added, module jdk.crypto.ec added manually when jlinking, in order for https to work